# Coordination-Trilemma

./: .dockerignore  .gitignore  .hadolint.yaml  .markdownlint.yaml  .markdownlintignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.security-tools  LATEX_README.md  LICENSE.md  Makefile  QUICKSTART.md  README.md  SOFTWARE-LICENSE.md  appendix-a.md  appendix-a.tex  appendix-b.md  appendix-b.tex  appendix-c.md  appendix-c.tex  appendix-d.md  appendix-d.tex  glossary.tex  main-article.tex  main.blg  main.tex  references.bib  reorganize-repo.sh  the-last-choice.md  theodicity-analysis.md  verify-signatures.sh  where-next.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  WORKFLOW_TRIGGERS.md  dependabot.yml
docker/: Dockerfile.latex  Dockerfile.security
docs/: BUILD.md  CI-CD.md  CLEANUP_AND_SLSA4_PLAN.md  DOCS_STYLE_GUIDE.md  INFRASTRUCTURE.md  INFRASTRUCTURE_SETUP_SUMMARY.md  README.md  SECURITY.md  SLSA_ROADMAP.md  STYLE_GUIDE.md  TROUBLESHOOTING.md  docker-setup.md  latex-guide.md  quickstart.md
models/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml
models/python/: __init__.py  pyproject.toml  requirements.txt
models/python/abm/: __init__.py  cooperation_threshold.py  corruption_dynamics.py  polycentric_governance.py
models/python/analysis/: __init__.py  calibration.py  compare_scenarios.py  generate_diagrams.py  parameter_sweep.py  visualize_bifurcation.py  visualize_montecarlo.py
models/python/configs/: baseline.yaml
scripts/: generate-build-info.sh  prose-lint.sh
(+49 files in other folders)
